Bugfix: Fix create_event scroll lag by adding: -webkit-overflow-scrolling: touch;

--- a/css/app.css
+++ b/css/app.css
@@ -134,6 +134,7 @@
     margin-top: 5%;
     justify-content: space-around;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     height: 120vh;
     padding-right: 17%;
     padding-left: 17%; }
